--- a/DumpPrinter/build.gradle
+++ b/DumpPrinter/build.gradle
@@ -20,7 +20,7 @@ jar {
         exclude 'META-INF/*.SF'
         exclude 'META-INF/*.DSA'
         exclude 'META-INF/*.RSA'
-        configurations.runtime.resolve().collect {
+        configurations.runtimeClasspath.resolve().collect {
             it.isDirectory() ? it : zipTree(it)
         }
     }
